<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_big">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_login"
            android:textSize="@dimen/text_size_title" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_register"
            android:textSize="@dimen/text_size_title" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_username"
        style="@style/EditTextTheme"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginTop="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:hint="@string/dialog_username" />

    <EditText
        android:id="@+id/et_password"
        style="@style/EditTextTheme"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginTop="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:hint="@string/dialog_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/ll_verife"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_big"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_verife_code"
            style="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/dialog_verify_code"
            android:inputType="number"
            android:maxLength="6" />

        <TextView
            android:id="@+id/tv_countdown"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_countdown"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <View
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide_small_line"
        android:layout_marginTop="@dimen/margin_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_big"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_btn_cancel" />

        <View
            android:id="@+id/line_2"
            android:layout_width="@dimen/divide_small_line"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_btn_confirm" />
    </LinearLayout>
</LinearLayout>