<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="100dp"
            android:layout_height="@dimen/button_size"
            android:gravity="center"
            android:paddingLeft="@dimen/padding_big"
            android:paddingRight="@dimen/padding_big"
            android:text="@string/dialog_btn_cancel"
            android:textSize="@dimen/text_size_subtitle" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/dialog_info"
            android:textSize="@dimen/text_size_appbar" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="100dp"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingLeft="@dimen/padding_big"
            android:paddingRight="@dimen/padding_big"
            android:text="@string/dialog_btn_confirm"
            android:textSize="@dimen/text_size_subtitle" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:paddingBottom="@dimen/padding_normal">

        <com.dzenm.helper.view.PickerView
            android:id="@+id/pv_primary"
            android:layout_width="@dimen/layout_empty_size"
            android:layout_height="160dp"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/tv_primary"
            android:layout_width="@dimen/layout_empty_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_year"
            android:textSize="@dimen/text_size_subtitle" />

        <com.dzenm.helper.view.PickerView
            android:id="@+id/pv_secondary"
            android:layout_width="@dimen/layout_empty_size"
            android:layout_height="160dp"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/tv_secondary"
            android:layout_width="@dimen/layout_empty_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_month"
            android:textSize="@dimen/text_size_subtitle" />

        <com.dzenm.helper.view.PickerView
            android:id="@+id/pv_unit"
            android:layout_width="@dimen/layout_empty_size"
            android:layout_height="160dp"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/tv_unit"
            android:layout_width="@dimen/layout_empty_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_day"
            android:textSize="@dimen/text_size_subtitle" />
    </LinearLayout>
</LinearLayout>