<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_normal"
        android:text="@string/dialog_graph"
        android:textSize="@dimen/subtitle_text_size" />

    <View
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide_small_line" />

    <TextView
        android:id="@+id/tv_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_normal"
        android:text="@string/dialog_gallery"
        android:textSize="@dimen/subtitle_text_size" />

    <View
        android:id="@+id/line_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide_small_line" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_normal"
        android:text="@string/dialog_btn_cancel"
        android:textSize="@dimen/subtitle_text_size" />
</LinearLayout>