<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/padding_big"
        android:paddingTop="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_big"
        android:text="@string/dialog_info"
        android:textColor="@color/colorPrimaryTextDark"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:background="@drawable/bg_gray_border"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:minLines="1"
        android:textSize="@dimen/main_body_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide_size"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/colorDivideDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_negative"
            android:layout_width="@dimen/layout_empty_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/dialog_btn_cancel" />

        <View
            android:id="@+id/line"
            android:layout_width="@dimen/divide_size"
            android:layout_height="match_parent"
            android:background="@color/colorDivideDark" />

        <Button
            android:id="@+id/bt_positive"
            android:layout_width="@dimen/layout_empty_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/dialog_btn_confirm" />
    </LinearLayout>
</LinearLayout>